--- a/pom.xml
+++ b/pom.xml
@@ -160,23 +160,33 @@
                 </dependencies>
             </plugin>
 
-            <plugin>
-                <groupId>com.lazerycode.jmeter</groupId>
-                <artifactId>jmeter-analysis-maven-plugin</artifactId>
-                <version>1.0.4</version>
-                <configuration>
-                    <source>${project.build.directory}/jmeter/results/Performance_Sherpath_Lesson.jtl</source>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>create-html-report</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>analyze</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+           <plugin>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
+                <execution>
+                    <phase>verify</phase>
+                    <configuration>
+                        <tasks>
+                            <mkdir dir="${project.build.directory}/jmeter/results/dashboard" />
+                            <copy file="${user.dir}/src/test/resources/reportgenerator.properties" 
+                                  tofile="${project.build.directory}/jmeter/bin/reportgenerator.properties" />
+                            <copy todir="${project.build.directory}/jmeter/bin/report-template">
+                                <fileset dir="${user.dir}/src/test/resources/report-template" />
+                            </copy>
+                            <java jar="C:\Users\kannan3\Downloads\apache-jmeter-3.1\apache-jmeter-3.1\bin\ApacheJMeter.jar" fork="true">
+                                <arg value="-g" />
+                                <arg value="${project.build.directory}/jmeter/results/Performance_Sherpath_Lesson.jtl" />
+                                <arg value="-o" />
+                                <arg value="${project.build.directory}/jmeter/results/dashboard/" />
+                            </java>
+                        </tasks>
+                    </configuration>
+                    <goals>
+                        <goal>run</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
 
             <plugin>
                 <!-- To start an embedded jetty with a simple webapp for demonstration purposes -->
